on kpi entry template

--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -40,7 +40,7 @@
 <div class="modal-outer" id="upload-kpi">
      <div class="upload-kpi modal-inner">
           <i class="icon-remove" id="upload-kpi-close"></i>
-          <a class="btn btn-primary download-btn" href="/files/template/kpi_entry_template.zip">
+          <a class="btn btn-primary download-btn" href="/kpis/download_entry_template">
            <%= I18n.t('fix.download_template')%>
           </a>
           <p class="template-info"><i class="icon-info-sign"></i> <%= I18n.t('fix.upload_info')%></p>
