--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>ClearInsight</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= yield :stylesheet_includes %>
-  <%= requirejs_include_tag "application" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta charse='utf-8'>
 </head>
